--- a/style.css
+++ b/style.css
@@ -1,59 +1,84 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  font-size: clamp(1.3rem, calc(1.42rem+0.6vw), 1.54rem);
+  font-size: clamp(1.3rem, calc(1.42rem+0.6vw), 1.54rem);
   display: flex;
+  font-family: 'Varela Round', sans-serif;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
-.container {
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  text-align: center;
-  width: 300px;
+button{
+  user-select: none;
+}
+h1 {
+  margin-bottom: 20px;
+}
+.flex{
+  display: flex;
+  /* flex-wrap: nowrap; */
+  text-wrap: nowrap;
+  justify-content: space-between;
+}
+.todo-form {
+  display: flex;
+  gap: 0.6rem;
+}
+
+.delete-button{
+  background-color: #F85A5A;
+  color: #010101B8;
+  margin-block-start: 0.91rem;
+  /* max-width: 2.5rem; */
+  border: 1px solid #FF9697;
+  flex: 0 1 20%;
+}
+
+#todo-input {
+  flex: 1 0 80%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+
+.todo-list {
+  list-style: none;
+  padding: 0;
+}
+
+.todo-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 4rem;
+  margin-bottom: .8rem;
+  padding: 0.21rem 0.6rem 0.21rem 1rem;
+  border: 1px solid #ccc;
+  border-radius: 0.325rem;
+}
+
+.theme-toggle{
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.fa-sun{
+  /* color: yellow; */
+  fill: yellow;
+}
+
+@keyframes slideInLeft {
+  from {
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
   }
-  
-  h1 {
-    margin-bottom: 20px;
+
+  to {
+    transform: translate3d(0, 0, 0);
   }
-  
-  .todo-form {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 10px;
-  }
-  #todo-input {
-    flex: 1;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  #add-button {
-    padding: 5px 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .todo-list {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .todo-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 5px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
+}
+
+.slideInLeft {
+  animation: slideInLeft 3000ms ease-in;
+}
